--- a/integrations/square.html
+++ b/integrations/square.html
@@ -1,5 +1,5 @@
 ---
-title: 'Square'
+title: 'Set up integration with Square'
 description: 'Guide to setting up Square as a sales channel.'
 ---
 
@@ -7,7 +7,18 @@ description: 'Guide to setting up Square as a sales channel.'
 
 Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.
 
-## Make it yours
+## What is Square?
 
 Square is an easy to use platform that offers advanced payment processing solutions and the creation of e-commerce websites. Known for its simplicity and efficiency, it allows businesses of any size to manage both physical and online sales on a single platform. Square facilitates the creation of online stores with tools that support adaptable design, inventory management, and secure payment options, optimizing the user experience and operational efficiency. Its integration of marketing and analytics tools helps maximize business visibility and growth.
 With this in mind, let's understand how the setup process for this sales channel works on our platform. Follow the steps below to correctly configure this setting:
+
+## First step: Access your store in Square
+
+To connect your store in Square with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:
+
+<ul>
+    <li>If you currently do not have a store created in Square, enter the following link to create one quickly.</li>
+    <li>On the other hand, if you already have a store in Square, enter the following link to access your store.</li>
+</ul>
+
+Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinity.
